tests/snapshots/ui_snapshots__boundary_100_chat.snap
---
source: tests/ui_snapshots.rs
assertion_line: 788
expression: "render_at(&chat_app, 100, 24)"
---
"                            │ spec · § Behavior (the contract: WHAT,│ 󰚩 chat · spec · § Behavior (th"
"  PIPELINE ──────────────── │󰲡 Feature: Audio                       │› make behavior stricter: retry"
"  ○ spec                    │                                       │3x                             "
"  ○ plan                    │󰲣 Goal                                 │Tightening the retry rule.     "
"  ○ plan-review             │                                       │ $0.030 4.2s                   "
"  ○ tests-red               │low-latency playback                   │  ✓ spec updated · $0.030      "
"  ○ implement               │                                       │                               "
"  ○ dual-review             │󰲣 Behavior (the contract: WHAT, not    │                               "
"  ○ coverage                │HOW)                                   │                               "
"  » next: spec              │                                       │                               "
"  architecture.md missing - │must retry on drop                     │                               "
"    run `ritual architect`  │                                       │                               "
"    to ground planning      │󰲣 Edge cases & failure modes           │                               "
"                            │                                       │                               "
" 󰚩 AGENTS ───────────────── │󰲣 Out of scope                         │                               "
"  󰚩 claude …                │                                       │                               "
"  󰚩 codex …                 │                                       │                               "
"  󱘖 bridge …                │                                       │                               "
"   nvim …                   │                                       │                               "
"   check ?                  │                                       │                               "
"                            │                                       │                               "
"   detached                 │                                       │  and cap it at 3 attempts     "
"                            │                                       │ j/k pipeline · l edit input · "
" RITUAL   detached  detached                                                                    "
