tests/snapshots/ui_snapshots__boundary_99_chat.snap
---
source: tests/ui_snapshots.rs
expression: "render_at(&chat_app, 99, 24)"
---
" spec · § Behavior (the contract: WHAT, not HOW)      │ 󰚩 chat · spec · § Behavior (the contra…    "
"󰲡 Feature: Audio                                      │› make behavior stricter: retry 3x          "
"                                                      │Tightening the retry rule.                  "
"󰲣 Goal                                                │ $0.030 4.2s                                "
"                                                      │  ✓ spec updated · $0.030                   "
"low-latency playback                                  │                                            "
"                                                      │                                            "
"󰲣 Behavior (the contract: WHAT, not HOW)              │                                            "
"                                                      │                                            "
"must retry on drop                                    │                                            "
"                                                      │                                            "
"󰲣 Edge cases & failure modes                          │                                            "
"                                                      │                                            "
"󰲣 Out of scope                                        │                                            "
"                                                      │                                            "
"                                                      │                                            "
"                                                      │                                            "
"                                                      │                                            "
"                                                      │                                            "
"                                                      │                                            "
"                                                      │                                            "
"                                                      │  and cap it at 3 attempts                  "
"                                                      │ j/k scroll · l edit input · i stage · ctrl+"
" RITUAL   detached  detached                                                                   "
