tests/snapshots/ui_snapshots__dashboard_apply_confirm_code_findings.snap
---
source: tests/ui_snapshots.rs
expression: render(&app)
---
"                            │   live   findings   history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │                                                             "
"  ○ plan-review             │                                                             "
"  ○ tests-red               │                                                             "
"  ○ implement               │                                                             "
"  ○ dual-review             │                                                             "
"  ○ coverage   ╭ apply answers ───────────────────────────────────────────╮               "
"               │fix 4 code finding(s) - one run + check.sh + re-review?   │               "
" 󰚩 AGENTS ─────│a passing fix stays in your working tree - review with git│               "
"  󰚩 claude …   │1 on other features skipped                               │review         "
"  󰚩 codex …    │ y  apply   u  unqueue this   esc  cancel                 │               "
"  󱘖 bridge …   ╰──────────────────────────────────────────────────────────╯               "
"   nvim …                   │                                                             "
"   check ?                  │                                                             "
"                            │                                                             "
"   detached                 │                                                             "
"                            │                                                             "
"                            │                                                             "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
