tests/snapshots/ui_snapshots__dashboard_ascii_mode.snap
---
source: tests/ui_snapshots.rs
expression: render(&app)
---
"                            │ [live]  findings    history    plan                         "
" # PIPELINE ─────────────── │─────────────────────────────────────────────────────────────"
"  ( ) spec                  │                                                             "
"  ( ) plan                  │                                                             "
"  ( ) plan-review           │                    █▀█ █ ▀█▀ █ █ ▄▀█ █                      "
"  ( ) tests-red             │                    █▀▄ █  █  █▄█ █▀█ █▄▄                    "
"  ( ) implement             │                                                             "
"  ( ) dual-review           │         s u m m o n  ·  r e v i e w  ·  v e r i f y         "
"                            │                                                             "
" ai: AGENTS ─────────────── │                                                             "
"  ai: claude …              │                  enter   run selected stage                 "
"  ai: codex …               │                                                             "
"  <> bridge …               │                     :   command palette                     "
"  nv nvim —                 │                                                             "
"  chk check ?               │                    a   take over session                    "
"                            │                                                             "
"  br: detached              │                           ?   keys                          "
"                            │                                                             "
"                            │                                                             "
"                            │                                                             "
"                            │                                                             "
" RITUAL  br: detached  detached                                                           "
