tests/snapshots/ui_snapshots__dashboard_chat_unfocused_sidebar_mode.snap
---
source: tests/ui_snapshots.rs
assertion_line: 748
expression: "render_at(&app, 110, 26)"
---
"                            │ spec · § Behavior (the contract: WHAT, not │ 󰚩 chat · spec · § Behavior (the con"
"  PIPELINE ──────────────── │󰲡 Feature: Audio                            │› make behavior stricter: retry 3x  "
"  ○ spec                    │                                            │Tightening the retry rule.          "
"  ○ plan                    │󰲣 Goal                                      │ $0.030 4.2s                        "
"  ○ plan-review             │                                            │  ✓ spec updated · $0.030           "
"  ○ tests-red               │low-latency playback                        │                                    "
"  ○ implement               │                                            │                                    "
"  ○ dual-review             │󰲣 Behavior (the contract: WHAT, not HOW)    │                                    "
"  ○ coverage                │                                            │                                    "
"  » next: spec              │must retry on drop                          │                                    "
"  architecture.md missing - │                                            │                                    "
"    run `ritual architect`  │󰲣 Edge cases & failure modes                │                                    "
"    to ground planning      │                                            │                                    "
"                            │󰲣 Out of scope                              │                                    "
" 󰚩 AGENTS ───────────────── │                                            │                                    "
"  󰚩 claude …                │                                            │                                    "
"  󰚩 codex …                 │                                            │                                    "
"  󱘖 bridge …                │                                            │                                    "
"   nvim …                   │                                            │                                    "
"   check ?                  │                                            │                                    "
"                            │                                            │                                    "
"   detached                 │                                            │                                    "
"                            │                                            │                                    "
"                            │                                            │  and cap it at 3 attempts          "
"                            │                                            │ j/k pipeline · l edit input · i sta"
" RITUAL   detached  detached                                                                              "
