tests/snapshots/ui_snapshots__dashboard_empty_project.snap
---
source: tests/ui_snapshots.rs
expression: render(&app)
---
"                            │  live   findings    history    plan                       "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │                                                             "
"  ○ plan-review             │                    █▀█ █ ▀█▀ █ █ ▄▀█ █                      "
"  ○ tests-red               │                    █▀▄ █  █  █▄█ █▀█ █▄▄                    "
"  ○ implement               │         s u m m o n  ·  r e v i e w  ·  v e r i f y         "
"  ○ dual-review             │                                                             "
"                            │    pipeline  spec → plan → review → tests → impl → dual     "
" 󰚩 AGENTS ───────────────── │        runs  daemons: quit freely, reattach · a takeover    "
"  󰚩 claude …                │    findings  Q → nvim quickfix · o open · e $EDITOR         "
"  󰚩 codex …                 │       money  daily budget · per-run caps · --force          "
"  󱘖 bridge …                │      safety  redaction · verify-log chain · repro           "
"   nvim —                   │          ci  --ci → JUnit · --json + exit codes             "
"   check ?                  │    parallel  new --worktree · [ ] switch features           "
"                            │        more  report · bench · export · offline · cmds       "
"   detached                 │                                                             "
"                            │     enter  run stage    :  palette    ?  keys    q  quit    "
"                            │                                                             "
"                            │                                                             "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
