tests/snapshots/ui_snapshots__dashboard_finding_detail_code_finding.snap
---
source: tests/ui_snapshots.rs
expression: render(&app)
---
"                            │   live   findings   history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○╭ finding ─────────────────────────────────────────────────────────────────────────╮   "
"  ○│Race in state save                                                                │M  "
"  ○│ CRIT   ◆both   claude+codex  confirmed [dual-review]                         │   "
"  ○│src/state.rs:42                                                                   │   "
"  ○│recommended: fix manually - confirmed code finding                                │   "
"  ○│                                                                                  │   "
"  ○│two writers clobber each other                                                    │   "
"   │                                                                                  │   "
" 󰚩 │▏ let st = load(&path)?; // no lock                                               │   "
"  󰚩│▏ save(&path, &st)?;                                                              │   "
"  󰚩│                                                                                  │   "
"  󱘖│                                                                                  │   "
"   │                                                                                  │   "
"   │                                                                                  │   "
"   │                                                                                  │   "
"   │                                                                                  │   "
"   │ f  fix   d  dismiss…   m  manual   o  nvim   e  editor   j/k  next   esc  close  │   "
"   ╰──────────────────────────────────────────────────────────────────────────────────╯   "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
