tests/snapshots/ui_snapshots__dashboard_finding_detail_plan_finding_wraps.snap
---
source: tests/ui_snapshots.rs
assertion_line: 324
expression: render(&app)
---
"                            │   live   findings   history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○╭ finding ─────────────────────────────────────────────────────────────────────────╮   "
"  ○│Deletion paths built from untrusted run ids can escape the runs dir               │⚑A "
"  ○│ MAJR  ◇single  claude  confirmed [plan-review]                                 │e  "
"  ○│plan step: Step 2 (delete via history::load_all metas)                            │   "
"  ○│⚓ anchor lost - step no longer found in plan.md                                  │   " Hidden by multi-width symbols: [(5, " ")]
"  ○│recommended: queue for claude - confirmed plan finding                            │   "
"  ○│                                                                                  │   "
"  »│A malicious or corrupt meta file carrying a run_id like ../../src lets the cleanup│   "
"   │step build a deletion path outside .ritual/runs, deleting arbitrary project files │   "
" 󰚩 │when clean executes with --keep 0 on a poisoned workspace.                        │   "
"  󰚩│                                                                                  │   "
"  󰚩│                                                                                  │   "
"  󱘖│                                                                                  │   "
"   │                                                                                  │   "
"   │                                                                                  │   "
"   │                                                                                  │   "
"   │ f  fix   d  dismiss…   F  queue claude   m  manual   o  nvim   e  editor   j/k  n│   "
"   ╰──────────────────────────────────────────────────────────────────────────────────╯   "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
