tests/snapshots/ui_snapshots__dashboard_findings_tab_triage_states.snap
---
source: tests/ui_snapshots.rs
expression: render(&app)
---
"                            │   live   findings   history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │   CRIT   ◆both  ⚓ Step 2 untriaged confirmed plan… →⚑A " Hidden by multi-width symbols: [(51, " ")]
"  ○ plan-review             │    s6 [plan-review:confirmed]                               "
"  ○ tests-red               │                                                             "
"  ○ implement               │   MAJR  ◇single ⚓ Step 2 queued for the claud… ⚑A queued " Hidden by multi-width symbols: [(49, " ")]
"  ○ dual-review             │    s1 [plan-review:confirmed]                               "
"                            │                                                             "
" 󰚩 AGENTS ───────────────── │   MAJR  ◇single src/a.rs:3 yours to fix by ha… ⚑M manual  "
"  󰚩 claude …                │    s2 [plan-review:confirmed]                               "
"  󰚩 codex …                 │                                                             "
"  󱘖 bridge …                │   MAJR   ◆both  ⚓ Step 5 resolution recorded by th… →✓ " Hidden by multi-width symbols: [(51, " ")]
"   nvim …                   │    s4 [plan-review:accepted]                                "
"   check ?                  │                                                             "
"                            │   minr  ◇single ⚓ Step 4 declined by the las… ✗ declined " Hidden by multi-width symbols: [(49, " ")]
"   detached                 │    s3 [plan-review:confirmed]                               "
"                            │                                                             "
"                            │   minr  ◇single ⚓ Step 6 retracted in round 2         →∅ " Hidden by multi-width symbols: [(49, " ")]
"                            │    s5 [plan-review:refuted]                                 "
"                            │                                                             "
" RITUAL   detached  detached                                                     ⚑1 "
